调试窗口功能

--- a/examples/src/pages/index/index.less
+++ b/examples/src/pages/index/index.less
@@ -1,8 +1,11 @@
 body {
-    text-align: center;
+  text-align: center;
 
-    .url_input {
-        width: 500px;
-        display: inline-block
-    }
+  .url_input {
+    width: 500px;
+    display: inline-block;
+  }
+  #player {
+    position: relative;
+  }
 }
