online parse ts format

--- a/examples/src/pages/index/index.less
+++ b/examples/src/pages/index/index.less
@@ -1,12 +1,10 @@
 body {
-  text-align: center;
 
-  .url_input {
+  padding: 0 20px;
+
+  .normal_input {
     width: 500px;
     display: inline-block;
-  }
-  #player {
-    position: relative;
-    display: inline-block;
+    margin-right: 10px;
   }
 }
