online parser ts format tool

--- a/examples/src/modules/parser/index.less
+++ b/examples/src/modules/parser/index.less
@@ -2,3 +2,26 @@
   margin-top: 20px;
   font-weight: bold;
 }
+
+.format-show {
+  margin-top: 40px;
+}
+
+.track-detail {
+  word-break: break-word;
+  box-shadow: 0px 0px 10px 1px #eee;
+  padding: 20px;
+  margin-right: 10px;
+
+  li {
+    line-height: 36px;
+  }
+}
+
+.sample {
+  line-height: 30px;
+  padding: 8px;
+  margin-bottom: 5px;
+  box-shadow: 0px 0px 10px 1px #eee;
+
+}
