1.fix live bug 2.live stream use demo

--- a/examples/src/modules/player/index.less
+++ b/examples/src/modules/player/index.less
@@ -2,3 +2,26 @@
   position: relative;
   display: inline-block;
 }
+
+.item-line {
+  margin-bottom: 10px;
+}
+
+.debug-tips {
+  text-align: center;
+  transform: scale(0.8);
+  margin-top: '5px'
+}
+
+.select-stream {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.ant-select {
+  padding: 0 20px;
+}
+
+.ant-modal-confirm .ant-modal-confirm-btns {
+  display: none;
+}
